# centralized-logs-mq

./: .gitignore  README.md  docker-compose.yml
client/: Cargo.toml
consumer/: go.mod  main.go
producer/: Cargo.toml
producer/src/: main.rs
