[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-global-executor = { version = "2.4.1", features = ["tokio"] }
futures-lite = "2.2.0"
lapin = "2.3.1"
tokio = { version = "1.36.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
